# crewai-decision-trace

./: .gitignore  Makefile  README.md  pyproject.toml
data/: constraints.yaml
data/personas/foodie/: transactions.csv
data/personas/movie_buff/: transactions.csv
data/personas/sports_fan/: transactions.csv
docs/: TUTORIAL.md  TUTORIAL_v1.md
scripts/: verify_outputs.py
src/crewai_decision_trace/: __init__.py  tracer.py
src/dt_crewai_demo/: __init__.py  cli.py  pipeline.py  verify.py  viewer.py
streamlit_viewer/: README.md  app.py
tests/: test_invariants.py  test_persona_variation.py  test_viewer_and_semantics.py
